[project]
name = "lvmcryo"
version = "0.1.0a0"
description = "LVM cryostat tools"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.12,<4"

dependencies = [
    "sdsstools>=1.6.1",
    "sdss-clu>=2.2.7",
    "pandas>=2.0.3",
    "rich>=13.4.2",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "asyncudp>=0.11.0",
    "pydantic>=2.9.1",
    "jinja2>=3.1.2",
    "sdss-drift>=1.2.0",
    "sshkeyboard>=2.3.1",
    "click-option-group>=0.5.6",
    "click-help-colors>=0.9.4",
]

[project.urls]
Homepage = "https://github.com/sdss/lvmcryo"
Repository = "https://github.com/sdss/lvmcryo"
Documentation = "https://lvmcryo.readthedocs.org"

[project.scripts]
lvmcryo = "lvmcryo.__main__:main"

[tool.uv]
package = true
dev-dependencies = [
    "ipython>=8.0.0",
    "matplotlib>=3.1.1",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck>=3.3.1",
    "black>=24.1.1",
    "Sphinx>=4.0.0",
    "furo>=2021.9.22",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "sphinx-jsonschema>=1.16.11",
    "myst-parser>=2.0.0",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.23.2",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["lvmcryo"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pytest.ini_options]
addopts = "--cov lvmcryo --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["src/lvmcryo/*"]
omit = [
    "*/__init__.py",
    "src/lvmcryo/__main__.py",
    "src/lvmcryo/types.py",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
