[project]
name = "lvmcryo"
version = "0.3.13"
description = "LVM cryostat tools"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.12,<4"

dependencies = [
    "sdsstools>=1.8.2",
    "sdss-clu>=2.2.7",
    "rich>=13.4.2",
    "httpx>=0.27.0",
    "pydantic>=2.9.1",
    "jinja2>=3.1.2",
    "sshkeyboard>=2.3.1",
    "lvmopstools>=0.5.14",
    "typer>=0.12.5",
    "polars>=1.7.1",
    "matplotlib>=3.9.2",
]

[project.urls]
Homepage = "https://github.com/sdss/lvmcryo"
Repository = "https://github.com/sdss/lvmcryo"

[project.scripts]
lvmcryo = "lvmcryo.__main__:cli"

[tool.uv]
package = true
dev-dependencies = [
    "ipython>=8.0.0",
    "ipdb>=0.13.13",
    "ruff>=0.6.0",
    "pytest>=8.3.3",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["lvmcryo"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "lvmopstools"]

[tool.pytest.ini_options]
addopts = "--cov lvmcryo --cov-report xml --cov-report html --cov-report term -W ignore"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["src/lvmcryo/*"]
omit = [
    "*/__init__.py",
    "src/lvmcryo/__main__.py",
    "src/lvmcryo/types.py",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "# pragma: no cover"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/lvmcryo"]
